# computing_in_finance

./: .env.example  .gitignore  Makefile  README.md  REPRODUCIBILITY.md  environment.yml  pyproject.toml
notebooks/: 01_classical_baseline.ipynb  99_final_report.ipynb  hpc_experiment_c_qaoa_gpu.ipynb
results/: experiment_c_octillion.json  experiment_c_octillion_seed123.json  experiment_c_octillion_seed42.json  experiment_c_octillion_seed7.json  hpc_qaoa-4002975.err  hpc_qaoa_stretch-4005253.err  hpc_qaoa_stretch_v2-4005608.err  hpc_qaoa_stretch_v2-4005687.err
results/final/: HEADLINE_RESULTS.md  experiment_a_business_table.csv  experiment_a_combined.csv  experiment_a_summary.csv  experiment_b_summary.csv  experiment_c_hpc_summary.csv  experiment_c_octillion_summary.csv  experiment_d_business_summary.md  experiment_d_business_summary_v2.md  experiment_d_business_summary_v3.md  experiment_d_business_summary_v4.md  experiment_d_business_table.csv  experiment_d_business_table_v2.csv  experiment_d_business_table_v3.csv  experiment_d_business_table_v4.csv
scripts/: aggregate_experiment_a.py  aggregate_experiment_a_combined.py  aggregate_experiment_b.py  aggregate_experiment_d.py  aggregate_hpc_qaoa.py  experiment_a_scalability.py  experiment_b_time_budget.py  experiment_c_octillion.py  experiment_d_walkforward.py  experiment_d_walkforward_v2.py  hpc_bootstrap.sh  hpc_fix_env.sh  hpc_qaoa.sbatch  hpc_qaoa_gpu.py  hpc_qaoa_stretch.sbatch  hpc_qaoa_stretch_v2.sbatch
src/cif/: __init__.py  problem.py
src/cif/backtest/: __init__.py  walkforward.py
src/cif/classical/: __init__.py  brute_force.py  continuous.py  milp.py
src/cif/data/: __init__.py  bootstrap_synthetic.py  cleaning.py  providers.py  statistics.py  universe.py
src/cif/experiments/: __init__.py
src/cif/metrics/: __init__.py
src/cif/quantum/: __init__.py  neal_sampler.py  qiskit_qaoa.py
src/cif/qubo/: __init__.py  builder.py  encoding.py
src/cif/scripts/: __init__.py  download_data.py
tests/: conftest.py  test_classical.py  test_encoding.py  test_qubo.py  test_tabu_solver.py  test_weighted_qubo.py
(+1 files in other folders)
