[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "computing-in-finance"
version = "0.1.0"
description = "Hybrid quantum-classical algorithms for discrete Markowitz portfolio optimization"
readme = "README.md"
requires-python = ">=3.10,<3.13"
authors = [
    {name = "Konstantin Patrushev", email = "kapatrushev@edu.hse.ru"},
]
license = {text = "MIT"}

dependencies = [
    "numpy>=1.26,<2.2",
    "pandas>=2.2,<2.3",
    "pyarrow>=15.0,<18.0",
    "scipy>=1.13,<1.15",
    "scikit-learn>=1.5,<1.6",
    "cvxpy>=1.5,<1.7",
    "ecos>=2.0",
    "matplotlib>=3.8,<3.10",
    "seaborn>=0.13,<0.14",
    "pulp>=2.8,<3.0",
    "pyscipopt>=6.0",
    "yfinance>=0.2.40",
    "apimoex>=1.4",
    "requests>=2.31",
    "lxml>=5.0",
    "beautifulsoup4>=4.12",
    "html5lib>=1.1",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "joblib>=1.4",
    "tqdm>=4.66",
    "dimod>=0.12",
    "dwave-ocean-sdk>=8.0",
    "qiskit>=1.2",
    "qiskit-aer>=0.15",
    "qiskit-ibm-runtime>=0.30",
    "qiskit-optimization>=0.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "ipykernel>=6.29",
    "jupyterlab>=4.2",
]
mlflow = [
    "mlflow>=2.15",
]

[project.scripts]
cif-download = "cif.scripts.download_data:main"
cif-build-instances = "cif.scripts.build_instances:main"
cif-run-experiment = "cif.scripts.run_experiment:main"
cif-aggregate = "cif.scripts.aggregate_results:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["cif*"]

[tool.setuptools.package-data]
cif = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"
markers = [
    "slow: marks tests that take significant time",
    "quantum: marks tests requiring quantum backend access",
    "network: marks tests requiring network access",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]
